# lyrch

./: .env.example  Cargo.toml  README.md  build.rs  i18n.json
.github/workflows/: build.yml  clippy.yml  rust.yml
i18n/: el_gr.json  en_us.json  es_es.json
src/: main.rs  prelude.rs
src/commands/: animal.rs  fun.rs  general.rs  manga.rs  misc.rs  mod.rs  moderation.rs  social.rs  weeb.rs
src/i18n/: definition.rs  el_gr.rs  en_us.rs  es_es.rs  mod.rs
src/lib/: cache.rs  core.rs  framework.rs  internal.rs  mod.rs  schedule.rs  settings.rs
src/lib/settings/: client.rs  clients.rs  guilds.rs  mod.rs  reminders.rs  users.rs
src/lib/util/: bucket.rs  event_handlers.rs  logger.rs  macros.rs  mod.rs  resolvers.rs
src/monitors/: mod.rs  social.rs
src/tasks/: misc.rs
