[package]
name = "lyrch"
version = "0.1.0"
authors = ["Antonio Román <kyradiscord@gmail.com>"]
edition = "2018"

[dependencies]
bit-vec = "0.4.4"
chrono = "0.4.7"
dotenv = "0.14.1"
lazy_static = "1.3.0"
postgres = { version = "0.15.2", features = ["with-chrono", "with-bit-vec", "with-serde_json"] }
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"
r2d2_redis = "0.10.1"
redis = "0.11.0"
regex = "1.2.1"
serde_json = "1.0.40"
serenity = "0.6.3"
threadpool = "1.7.1"
