[package]
name = "lyrch"
version = "0.1.0"
authors = ["Antonio Román <kyradiscord@gmail.com>"]
edition = "2018"

[dependencies]
bit-vec = "0.4.4"
chrono = "0.4.7"
dotenv = "0.14.1"
hey_listen = "0.4.0"
lazy_static = "1.3.0"
postgres = { version = "0.15.2", features = ["with-chrono", "with-bit-vec", "with-serde_json"] }
r2d2 = "0.8.5"
r2d2_postgres = "0.14.0"
r2d2_redis = "0.10.1"
redis = "0.11.0"
regex = "1.2.1"
reqwest = "0.9.19"
serde_json = "1.0.40"
serde_postgres = "0.1.3"
serde = "1.0.99"
serenity = "0.6.3"
threadpool = "1.7.1"
white_rabbit = "0.1.1"
